--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 	font-family: "Marker Felt","Comic Sans MS", fantasy;
-	color:#003366;
+	color:#bfbfbf;
        }
 
 h1 {
@@ -19,7 +19,7 @@ table {
 td {
 	border: 1px solid #ffffff;
 	text-align:center;
-	background-color:#9FB6CD; 
+	background-color:#d9d9d9; 
     }
 
 th {
