--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ table {
          }
 
 td {
-	border: 1px solid #ffffff;
+	border: 1px solid #000000;
 	text-align:center;
 	background-color:#d9d9d9; 
     }
 
 th {
 	text-align:center;
-	color:#ffffff;
-	background-color:#003366;
+	color:#000000;
+	background-color:#d9d9d9;
    }
