--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ table {
 td {
 	border: 1px solid #000000;
 	text-align:center;
-	background-color:#d9d9d9; 
+	background-color:#666666; 
     }
 
 th {
