--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ table {
 td {
 	border: 1px solid #000000;
 	text-align:center;
-	background-color:#a6a6a6; 
+	background-color:#ff8533; 
     }
 
 th {
 	text-align:center;
 	color:#000000;
-	background-color:#666666;
+	background-color:#b34700;
    }
