--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	font-family: "Marker Felt","Rosewood STD Regular", fantasy;
+	font-family: "Marker Felt","Arial Black", fantasy;
 	color:#000000;
        }
 
