--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ table {
          }
 
 td {
-	border: 1px solid #80002a;
+	border: 1px solid #ffffff;
 	text-align:center;
 	background: #ff1a75; 
     }
