--- a/style.css
+++ b/style.css
@@ -1,19 +1,6 @@
-<style style="text/css">
-  	.hoverTable{
-		width:100%; 
-		border-collapse:collapse; 
-	}
-	.hoverTable td{ 
-		padding:7px; border:#4e95f4 1px solid;
-	}
-	/* Define the default color for all the table rows */
-	.hoverTable tr{
-		background: #b8d1f3;
-	}
-	/* Define the hover highlight color for the table row */
-    .hoverTable tr:hover {
-          background-color: #ffff99;
-    }
+tr:hover {
+  background-color: lightyellow;
+}
 body{
 	font-family: "Marker Felt","Arial Black", fantasy;
 	color:#80002a;
@@ -46,5 +33,5 @@ th {
    tr:hover {
           background-color: #ffff99;
         }
-</style>
+
 
